<resources>
    <string name="app_name">GrocyBusiness</string>
    <string-array name="shop_category">

        <item color="#9DC0F9">Grocery</item>
        <item>Pharmacy</item>
        <item>Hardware</item>
        <item>Stationary</item>
        <item>Fruits and Vegetables</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //nav
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="order_details"><u>Order details</u></string>
    <string name="aboutus">We are the one for your all kind of daily needs like groceries, vegetables, medicines, stationary etc at your doorstep by your chosen shop within an hour.\n\nBasically, in our app all your nearby shops are shown and you can view and order the items from the shops and it will be deliver within an hour to your doorstep.</string>
    <string name="mission">Our mission is to provide solution to your every possible daily needs and other goods at your door step safely.</string>
    <string name="vision">To be India\'s most recognized platform in order to fullfill every kind of daily needs and other goods.</string>
    <string name="values">Customer Commitment\nTeamwork\nRespect for People\nFast is better than slow</string>
    <string name="differ">A smooth and friendly users experience that has been built to ensures the user seamless adoption.\nWe deliver all type of goods at your doorstep from your favourite store within an hour.\nFluidity and full integration cover the needs of even the most complex companies.</string>
    <string name="rating">We are glad to hear that you love Grocy.\nWould you like to share your experience by rating us on play store?</string>
    <string name="suggestion">Do you have a suggestion or face some issues?\nLet us know in the field below.</string>
    <string name="test">A Sender ID is a unique name or standard mobile number that shows in the “from” field of your text messages on your phone. So, instead of the message coming from a system generated long number, you can choose your company name, campaign name or even a standard mobile number. By using a Sender ID, your customers will immediately recognise who the SMS text message is from. Take a look how Greenhead College uses their Sender ID. Recipients can’t reply to text messages sent using a Sender ID making it ideal for sending SMS messages that don’t need a response. But remember, you will need to include clear instructions in the message on how recipients can opt-out. By doing this, you’ll be sticking to the industry codes of best practice with every send. If you’re ready to get your SMS message branded today, apply for your free Sender ID here. Don\'t have a BulkSMS account yet? Register now to send SMS messages from your company or brand name. Please note that Sender IDs are not available for all destinations and will need to be manually tested by our support team.</string>
    <string name="add_variant">Add variant</string>
    <string name="item_image">Item image</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="gm">gm</string>
    <string name="rupee_symbol">₹</string>
    <string name="item_price">Item Price</string>


</resources>